updated security issue

--- a/src/index.html
+++ b/src/index.html
@@ -163,10 +163,10 @@
             <div class="row">
                 <div class="col">
                     <label>Access ID:</label>
-                    <input type="password" id="access_id" placeholder="ACCESS ID" value="AKIARBCUX7XJL344CM4R" />
+                    <input type="password" id="access_id" placeholder="ACCESS ID" value="" />
     
                     <label>Secret Key:</label>
-                    <input type="password" id="secret_key" placeholder="SECRET KEY" value="WTiUeMG3/rg5B7kIUc2M3yPp10dnAf1R0YrTKC9N" />
+                    <input type="password" id="secret_key" placeholder="SECRET KEY" value="" />
                     <label>Session Token (if using MFA):</label>
                     <input type="password" id="session_token" placeholder="SESSION TOKEN" value="" />
                 </div>
